--- a/src/app/shared/scoreboards/admin-forms/change-teams-forms/change-teams-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/change-teams-forms/change-teams-forms.component.less
@@ -18,12 +18,18 @@
   border: 1px solid #000000;
 
   display: grid;
+  grid-template-columns: auto;
   //grid-template-rows: auto auto auto;
   padding: 10px;
   grid-gap: 10px;
 
   align-content: center;
   justify-content: stretch;
+}
+
+.logo-scale-size {
+  display: grid;
+  grid-gap: 10px
 }
 
 
