--- a/src/app/shared/scoreboards/admin-forms/change-teams-forms/change-teams-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/change-teams-forms/change-teams-forms.component.less
@@ -1,5 +1,5 @@
 .change-team-info {
-  border: 1px solid #000000;
+  //border: 1px solid #000000;
 
   display: grid;
   grid-template-rows: auto auto;
@@ -15,6 +15,8 @@
 .name-form-b,
 .logo-form-a,
 .logo-form-b {
+  box-shadow: 0px 0px 5px 0px #232323;
+  border-radius: 5px;
   border: 1px solid #000000;
 
   display: grid;
