--- a/src/app/shared/scoreboards/admin-forms/qtr-forms/qtr-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/qtr-forms/qtr-forms.component.less
@@ -3,6 +3,8 @@
   border-radius: 5px;
 
   display: grid;
+  grid-template-columns: auto auto auto auto;
+
   margin-top: 5px;
   margin-bottom: 5px;
 }
@@ -17,4 +19,35 @@
 
   align-content: center;
   justify-content: stretch;
+}
+
+.flag-goal-btns {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-column: span 3;
+}
+
+.flag-goal-btn {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+
+@media screen and (max-width: 720px) {
+  .quarter {
+    grid-template-columns: auto auto;
+  }
+
+  .flag-goal-btns {
+    grid-template-columns: auto;
+    grid-column: span 1;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .quarter {
+    grid-template-columns: auto;
+  }
 }
