scoreboard display css refactor

--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
@@ -6,15 +6,21 @@
         <div
           class="team_a-detail"
           [style]="{'background-color': data.scoreboard_data?.team_a_game_color}">
-
-          <div class="team_a-name">
-              <span [style.font-size]="teamAFontSize">
+          <div class="team-block">
+            <div class="team_a-name">
+              <span class="team_a-name-span" [style.font-size]="teamAFontSize">
                 {{
                   data.scoreboard_data?.use_team_a_game_title ?
                     data.scoreboard_data?.team_a_game_title :
                     data.teams_data?.team_a?.title
                 }}
               </span>
+            </div>
+            <div class="team_a-thisgame">
+              <div class="team-timeout">
+                <span class="timeout-text">{{ data.match_data?.timeout_team_a }}</span>
+              </div>
+            </div>
           </div>
 
           <div class="team_a-logo">
@@ -30,26 +36,33 @@
             >
           </div>
           <div class="team-scoreblock">
-            <span [@scoreChange]="scoreAState">{{ data.match_data?.score_team_a }}</span>
+            <span
+              class="team-scoreblock-text"
+              [@scoreChange]="scoreAState">{{ data.match_data?.score_team_a }}
+            </span>
           </div>
-          <div class="team_a-thisgame">
-            <div class="team-timeout">
-              <span>{{ data.match_data?.timeout_team_a }}</span>
-            </div>
-          </div>
+
         </div>
         <div
           class="team_b-detail"
           [style]="{'background-color': data.scoreboard_data?.team_b_game_color}"
         >
-          <div class="team_b-name">
-            <span [style.font-size]="teamBFontSize">
-              {{
-                data.scoreboard_data?.use_team_b_game_title ?
-                  data.scoreboard_data?.team_b_game_title :
-                  data.teams_data?.team_b?.title
-              }}
-            </span>
+          <div class="team-block">
+            <div class="team_b-name">
+              <span class="team_b-name-span" [style.font-size]="teamBFontSize">
+                {{
+                  data.scoreboard_data?.use_team_b_game_title ?
+                    data.scoreboard_data?.team_b_game_title :
+                    data.teams_data?.team_b?.title
+                }}
+              </span>
+            </div>
+            <div class="team_b-thisgame">
+              <div class="team-timeout">
+                <span class="timeout-text">{{ data.match_data?.timeout_team_b }}</span>
+              </div>
+            </div>
+
           </div>
           <div class="team_b-logo">
             <img
@@ -64,13 +77,12 @@
             >
           </div>
           <div class="team-scoreblock">
-            <span [@scoreChange]="scoreBState">{{ data.match_data?.score_team_b }}</span>
+            <span
+              class="team-scoreblock-text"
+              [@scoreChange]="scoreBState"
+            >{{ data.match_data?.score_team_b }}</span>
           </div>
-          <div class="team_b-thisgame">
-            <div class="team-timeout">
-              <span>{{ data.match_data?.timeout_team_b }}</span>
-            </div>
-          </div>
+
         </div>
       </div>
 
