--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -64,6 +64,9 @@
   grid-row: span 2;
   grid-template-columns: auto;
   grid-template-rows: 75% 20%;
+
+  position: relative;
+  overflow: visible;
 }
 
 .team_a-detail,
@@ -291,20 +294,24 @@
   font-family: 'IntegralCF-DemiBold', sans-serif;
 }
 
-.flag {
+.flag, .touchdown {
   position: absolute;
-  top: 0;
+  top: -10px;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #f0d71d;
   display: grid;
   grid-template-columns: auto;
   align-items: center;
   justify-content: center;
 }
 
-.flag-span {
+.flag {
+  top: 0;
+  background-color: #f0d71d;
+}
+
+.flag-span, .touchdown-span {
   font-size: 30px;
   text-transform: uppercase;
 }
