admin forms refactored

--- a/src/app/components/match/add-edit-match/add-edit-match.component.html
+++ b/src/app/components/match/add-edit-match/add-edit-match.component.html
@@ -59,7 +59,7 @@
         >
           <div class="template">
 
-            <div>{{ data.title }}</div>
+            <div>{{ data.title | titlecase }}</div>
           </div>
         </ng-template>
 
