--- a/src/app/shared/scoreboards/admin-forms/qtr-forms/qtr-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/qtr-forms/qtr-forms.component.html
@@ -26,19 +26,19 @@
 
   </form>
 
-  <form class="flag-goal-btns">
+  <form class="goal-btns">
+    <!--    <button-->
+    <!--      class="flag-goal-btn"-->
+    <!--      appearance="secondary-destructive"-->
+    <!--      tuiButton-->
+    <!--      size="m"-->
+    <!--      type="button"-->
+    <!--      [disabled]="disabled"-->
+    <!--      (click)="toggleFlag(data?.scoreboard_data!)"-->
+    <!--    >FLAG-->
+    <!--    </button>-->
     <button
-      class="flag-goal-btn"
-      appearance="secondary-destructive"
-      tuiButton
-      size="m"
-      type="button"
-      [disabled]="disabled"
-      (click)="toggleFlag(data?.scoreboard_data!)"
-    >FLAG
-    </button>
-    <button
-      class="flag-goal-btn"
+      class="goal-btn"
       appearance="down-admin"
       tuiButton
       size="m"
@@ -48,7 +48,7 @@
     >TD HOME
     </button>
     <button
-      class="flag-goal-btn"
+      class="goal-btn"
       appearance="down-admin"
       tuiButton
       size="m"
