--- a/src/app/shared/scoreboards/admin-forms/down-distance-forms/down-distance-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/down-distance-forms/down-distance-forms.component.less
@@ -67,11 +67,8 @@
 
 
 .down-dist-selector-form {
-  //border: 1px solid #000000;
-
   display: grid;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto auto;
+  grid-template-columns: auto auto;
 
   padding: 10px;
   grid-gap: 10px;
@@ -80,12 +77,21 @@
   justify-content: stretch;
 }
 
-.down-dist-selector-game,
+.down-dist-selector-game {
+  display: grid;
+  grid-template-columns: auto;
+
+  grid-gap: 10px;
+
+  align-content: center;
+  justify-content: stretch;
+}
+
 .down-dist-selector-conv,
 .down-dist-selector-kick {
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: auto auto;
+  //grid-template-rows: auto auto;
 
   grid-gap: 10px;
 
@@ -95,11 +101,9 @@
 
 @media screen and (max-width: 720px) {
   .down-and-distance {
-    border: 1px solid #000000;
-
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
+    //grid-template-rows: auto auto auto;
 
     padding: 10px;
     grid-gap: 10px;
@@ -109,12 +113,11 @@
   }
 
   .change-down-distance-text {
-    border: 1px solid #000000;
     grid-column: span 1;
 
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: auto auto;
+    //grid-template-rows: auto auto;
 
     padding: 10px;
     grid-gap: 10px;
@@ -125,7 +128,7 @@
 
 @media screen and (max-width: 420px) {
   .down-selector {
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: auto auto;
   }
 
   .down-dist-selector-form {
