--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -11,6 +11,7 @@
 
 .scoreboard {
   display: grid;
+  unicode-bidi: isolate;
 
   grid-template-columns: auto auto;
   grid-template-rows: auto;
@@ -18,7 +19,7 @@
   grid-gap: 0;
 
   align-content: start;
-  justify-content: start;
+  //justify-content: start;
 
   margin: 0;
 }
@@ -45,7 +46,7 @@
 .teams-container {
   display: grid;
 
-  border: 2px solid #000000;
+  border: 1px solid #bababa;
   grid-template-columns: auto auto;
 }
 
@@ -63,7 +64,7 @@
   display: grid;
   grid-row: span 2;
   grid-template-columns: auto;
-  grid-template-rows: 75% 20%;
+  grid-template-rows: 70% 20%;
 
   position: relative;
   overflow: visible;
@@ -143,6 +144,7 @@
 .team_b-thisgame {
   display: grid;
   justify-content: center;
+  //align-content: center;
 
 }
 
@@ -169,25 +171,33 @@
 .team-scoreblock {
   grid-row: span 2;
 
-  font-family: 'IntegralCF-Bold', sans-serif;
+  //font-family: 'IntegralCF-Bold', sans-serif;
+  font-family: 'Arial', sans-serif;
   display: grid;
-
+  //display: inlinde;
   letter-spacing: 0.2em;
 
   height: 100%;
   width: 70px;
 
-  align-items: center;
+  align-content: center;
+  //text-align: center;
+  //align-items: center;
   justify-content: center;
 
   background-color: rgba(31, 31, 31, 0.8);
 
-  padding: 0 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+
+  //padding: 0 5px;
 }
 
 .team-scoreblock-text {
-  display: contents;
+  //display: contents;
   font-size: 44px;
+  //height: 70px;
+  //line-height: 50px;
 }
 
 .quarter {
