admin forms refactored

--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -172,7 +172,8 @@
   grid-row: span 2;
 
   //font-family: 'IntegralCF-Bold', sans-serif;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Noto Sans Black', sans-serif;
+
   display: grid;
   //display: inlinde;
   letter-spacing: 0.2em;
