css fonts for scoreboard display and time decrement correction

--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -55,8 +55,8 @@
 
   background-color: #4A4A4AFF;
 
-  border-top: 2px solid #000000;
-  border-bottom: 2px solid #000000;
+  border-top: 1px solid #bababa;
+  border-bottom: 1px solid #bababa;
   grid-template-columns: auto auto auto auto;
 }
 
@@ -144,13 +144,15 @@
 .team_b-thisgame {
   display: grid;
   justify-content: center;
+
   //align-content: center;
 
 }
 
 .timeout-text,
 .timeout-text {
-  font-size: 18px;
+  font-family: 'Noto Sans Black', monospace;
+  font-size: 20px;
 }
 
 
@@ -172,18 +174,15 @@
   grid-row: span 2;
 
   //font-family: 'IntegralCF-Bold', sans-serif;
-  font-family: 'Noto Sans Black', sans-serif;
+  font-family: 'Noto Sans Black', monospace;
 
   display: grid;
-  //display: inlinde;
   letter-spacing: 0.2em;
 
   height: 100%;
   width: 70px;
 
   align-content: center;
-  //text-align: center;
-  //align-items: center;
   justify-content: center;
 
   background-color: rgba(31, 31, 31, 0.8);
@@ -191,14 +190,10 @@
   padding-left: 5px;
   padding-right: 5px;
 
-  //padding: 0 5px;
 }
 
 .team-scoreblock-text {
-  //display: contents;
-  font-size: 44px;
-  //height: 70px;
-  //line-height: 50px;
+  font-size: 55px;
 }
 
 .quarter {
@@ -208,7 +203,7 @@
 
   letter-spacing: 0.1em;
 
-  border-right: 2px solid #000000;
+  border-right: 1px solid #bababa;
 
 
   align-items: center;
@@ -229,7 +224,7 @@
   width: 60px;
   height: 100%;
 
-  border-right: 2px solid #000000;
+  border-right: 1px solid #bababa;
   letter-spacing: 0.1em;
 
   align-items: center;
@@ -242,7 +237,7 @@
 
 .play-clock span {
 
-  font-size: 28px;
+  font-size: 30px;
   color: #ffc710;
 
   text-transform: uppercase;
@@ -260,9 +255,9 @@
   justify-content: center;
   width: 100px;
   height: 100%;
-  font-size: 26px;
+  font-size: 30px;
   letter-spacing: 0.05em;
-  border-right: 2px solid #000000;
+  border-right: 1px solid #bababa;
   text-transform: uppercase;
   margin: 0;
   padding: 0 5px;
@@ -283,7 +278,7 @@
 
   letter-spacing: 0.1em;
   background: #808080;
-  border-right: 2px solid #000000;
+  border-right: 1px solid #bababa;
 
   align-items: center;
   justify-content: center;
@@ -293,7 +288,7 @@
 }
 
 .downandyard-span {
-  font-size: 20px;
+  font-size: 22px;
   text-transform: uppercase;
 }
 
@@ -302,7 +297,8 @@
 .play-clock,
 .timeleft,
 .downandyard {
-  font-family: 'IntegralCF-DemiBold', sans-serif;
+  //font-family: 'IntegralCF-DemiBold', sans-serif;
+  font-family: 'Noto Sans Black', monospace;
 }
 
 .flag, .touchdown {
