--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
@@ -9,8 +9,11 @@
           <div class="team-block">
             <div class="team_a-name">
               <span
-                *ngIf="!data.scoreboard_data?.is_goal_team_a"
-                class="team_a-name-span" [style.font-size]="teamAFontSize">
+                [hidden]="data.scoreboard_data?.is_goal_team_a"
+                [@visibilityChange]="teamAVisibility"
+                class="team_a-name-span"
+                [style.font-size]="teamAFontSize"
+              >
                 {{
                   data.scoreboard_data?.use_team_a_game_title ?
                     data.scoreboard_data?.team_a_game_title :
@@ -19,22 +22,23 @@
               </span>
             </div>
             <div
-              *ngIf="!data.scoreboard_data?.is_goal_team_a"
+              [hidden]="data.scoreboard_data?.is_goal_team_a"
+              [@visibilityChange]="teamAVisibility"
               class="team_a-thisgame"
             >
-              <div
-                class="team-timeout">
+              <div class="team-timeout">
                 <span class="timeout-text">{{ data.match_data?.timeout_team_a }}</span>
               </div>
             </div>
 
             <div
-              *ngIf="data.scoreboard_data?.is_goal_team_a"
+              [hidden]="!data.scoreboard_data?.is_goal_team_a"
+              [@visibilityChange]="teamAVisibility == 'invisible' ? 'visible' : 'invisible'"
               class="touchdown"
             >
-            <span class="touchdown-span">
-              {{ goal | uppercase }}
-            </span>
+              <span class="touchdown-span breathing">
+                {{ goal | uppercase }}
+              </span>
             </div>
 
           </div>
@@ -66,8 +70,11 @@
           <div class="team-block">
             <div class="team_b-name">
               <span
-                *ngIf="!data.scoreboard_data?.is_goal_team_b"
-                class="team_b-name-span" [style.font-size]="teamBFontSize">
+                [hidden]="data.scoreboard_data?.is_goal_team_b"
+                [@visibilityChange]="teamBVisibility"
+                class="team_b-name-span"
+                [style.font-size]="teamBFontSize"
+              >
                 {{
                   data.scoreboard_data?.use_team_b_game_title ?
                     data.scoreboard_data?.team_b_game_title :
@@ -76,7 +83,8 @@
               </span>
             </div>
             <div
-              *ngIf="!data.scoreboard_data?.is_goal_team_b"
+              [hidden]="data.scoreboard_data?.is_goal_team_b"
+              [@visibilityChange]="teamBVisibility"
               class="team_b-thisgame"
             >
               <div class="team-timeout">
@@ -85,10 +93,13 @@
             </div>
 
             <div
-              *ngIf="data.scoreboard_data?.is_goal_team_b"
+              [hidden]="!data.scoreboard_data?.is_goal_team_b"
+              [@visibilityChange]="teamBVisibility == 'invisible' ? 'visible' : 'invisible'"
               class="touchdown"
             >
-            <span class="touchdown-span">
+            <span
+              class="touchdown-span breathing"
+            >
               {{ goal | uppercase }}
             </span>
             </div>
@@ -146,17 +157,18 @@
         <div
           *ngIf="data.scoreboard_data?.is_downdistance"
           class="downandyard"
+          [hidden]="!data.scoreboard_data?.is_downdistance"
+          [@visibilityChange]="downAndYardVisibility"
         >
-          <span class="downandyard-span">
-            {{ data.match_data?.down }}{{ data.match_data?.down ? ' & ' : '' }}{{ data.match_data?.distance }}
-          </span>
+  <span class="downandyard-span">
+    {{ data.match_data?.down }}{{ data.match_data?.down ? ' & ' : '' }}{{ data.match_data?.distance }}
+  </span>
           <div
-            *ngIf="data.scoreboard_data?.is_flag"
             class="flag"
+            [hidden]="!data.scoreboard_data?.is_flag"
+            [@visibilityChange]="flagVisibility"
           >
-            <span class="flag-span">
-            FLAG
-            </span>
+            <span class="flag-span">FLAG</span>
           </div>
         </div>
       </div>
