--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -2,7 +2,8 @@
 .fullhd-scoreboard-container {
   //display: grid;
   padding: 10px;
-  font-family: 'Gunterz-Regular', sans-serif;
+  font-family: 'Noto Sans Black', monospace;
+  //font-family: 'Gunterz-Regular', sans-serif;
 
   color: #ffffff;
   font-weight: bold;
@@ -61,6 +62,8 @@
 }
 
 .team-block {
+  font-family: 'Noto Sans Black', monospace;
+
   display: grid;
   grid-row: span 2;
   grid-template-columns: auto;
@@ -142,6 +145,7 @@
 
 .team_a-thisgame,
 .team_b-thisgame {
+  font-family: 'Noto Sans Black', monospace;
   display: grid;
   justify-content: center;
 
@@ -303,7 +307,7 @@
 
 .flag, .touchdown {
   position: absolute;
-  top: -10px;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
@@ -321,6 +325,22 @@
 .flag-span, .touchdown-span {
   font-size: 30px;
   text-transform: uppercase;
+}
+
+@keyframes breathing {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.breathing {
+  animation: breathing 2s infinite ease-in-out;
 }
 
 
