scoreboard animations added to flag and tds budjets enhenced

--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -277,7 +277,7 @@
 .downandyard {
   display: grid;
   grid-template-columns: auto;
-  width: 160px;
+  width: 180px;
   height: 100%;
 
   letter-spacing: 0.1em;
@@ -292,7 +292,7 @@
 }
 
 .downandyard-span {
-  font-size: 22px;
+  font-size: 26px;
   text-transform: uppercase;
 }
 
@@ -319,7 +319,7 @@
 
 .flag {
   top: 0;
-  background-color: #f0d71d;
+  background-color: #e4cd1c;
 }
 
 .flag-span, .touchdown-span {
@@ -332,7 +332,7 @@
     transform: scale(1);
   }
   50% {
-    transform: scale(1.2);
+    transform: scale(1.1);
   }
   100% {
     transform: scale(1);
