--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -277,8 +277,10 @@
 .downandyard {
   display: grid;
   grid-template-columns: auto;
-  width: 180px;
+  width: 190px;
   height: 100%;
+  padding-right: 5px;
+  padding-left: 5px;
 
   letter-spacing: 0.1em;
   background: #808080;
