admin time forms refactored

--- a/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.html
@@ -9,7 +9,7 @@
 
       <form
         class="game-time-form"
-        [formGroup]="timeForm"
+        [formGroup]="gameClockForm"
       >
         <div class="time-inputs">
           <tui-input-number
@@ -57,7 +57,7 @@
 
       <form
         class="play-time-form"
-        [formGroup]="timeForm"
+        [formGroup]="playClockForm"
       >
         <div class="play-time">
           <tui-input
