--- a/src/app/components/team/item-team/item-team.component.html
+++ b/src/app/components/team/item-team/item-team.component.html
@@ -4,7 +4,7 @@
     <h3 class="tui-text_h3">
       {{ team.title | uppercase }}
     </h3>
-    <p>
+    <p [style.background-color]="team.team_color">
       <!--      url: {{ staticUrl }}<br>-->
       <!--      port: {{ staticPort }}<br>-->
       <!--      team url: {{ team.team_logo_url }}<br>-->
